--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <header class="text-center pt-5">
-        <h1>PokeApi Ejemplo</h1>
-        <p class="lead"> Un ejemplo de una Pokedex online!</p>
+        <h1>Cuantos Pokenon hay?</h1>
+        <p class="lead"> un Pokedex online! La mamá tiene cara de poto</p>
     </header>
     <section>
         <form id="pokemon-formulario">
