--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <div class="card-header">
                     <table class="table" id="pokemon-tabla"></table>
                 </div>
+
+            </div>
+            <div class="card">
+                
             </div>
         </div>
     </div>
