--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="text-center pt-5">
         <h1>Cuantos Pokenon hay?</h1>
-        <p class="lead"> un Pokedex online! La mamá tiene cara de poto</p>
+        <p class="lead"> un Pokedex online!</p>
     </header>
     <section>
         <form id="pokemon-formulario">
